--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/express": "^5.0.6",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "ngrok": "^5.0.0-beta.2",
+    "telegraf": "^4.16.3"
   }
 }
