--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 BOT_TOKEN= Will be taken from the telegram bot father
 WEBHOOK_SECRET= A random gibberish string for security purposes
 WEBHOOK_URL= Actual pbulic https address where the bot is hosted ( Or we can use ngrok for development purpose )
+GEMINI_API_KEY= From google ai studio
