--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@google/genai": "^1.32.0",
+    "@types/axios": "^0.9.36",
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
