--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "ngrok": "^5.0.0-beta.2",
-    "telegraf": "^4.16.3"
+    "telegraf": "^4.16.3",
+    "zod": "^4.1.13"
   }
 }
