--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/aaditya4959/OnTime#readme",
   "description": "",
   "devDependencies": {
+    "@types/express-session": "^1.18.2",
+    "@types/passport": "^1.0.17",
     "typescript": "^5.9.3"
   },
   "dependencies": {
@@ -27,11 +29,15 @@
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
+    "@types/passport-google-oauth20": "^2.0.17",
     "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "ngrok": "^5.0.0-beta.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "telegraf": "^4.16.3",
     "zod": "^4.1.13"
   }
