--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-session": "^1.18.2",
+    "googleapis": "^169.0.0",
     "ngrok": "^5.0.0-beta.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
