--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ngrok": "^5.0.0-beta.2",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "redis": "^5.10.0",
     "telegraf": "^4.16.3",
     "zod": "^4.1.13"
   }
